add fleet webhooks

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -37,3 +37,6 @@
     - id: loads
       title: Loads
       url: /loads/webhooks.html
+    - id: fleet
+      title: Fleet
+      url: /fleet/webhooks.html
