update doc structure

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,42 +1,42 @@
 - title: REST Api Documentation
-  url: /
+  url: /rest
   items:
     - id: organisations
       title: Organistions
-      url: /organisations
+      url: /rest/organisations
     - id: fleet
       title: Fleet
-      url: /fleet
+      url: /rest/fleet
     - id: tracking
       title: Tracking
       url: /tracking
     - id: loads
       title: Loads
-      url: /loads
+      url: /rest/loads
       subitems:
         - id: loads-shippers
           title: Shippers
-          url: /loads/shippers
+          url: /rest/loads/shippers
         - id: loads-drivers
           title: Drivers
-          url: /loads/drivers
+          url: /rest/loads/drivers
         - id: loads-integration
           title: Integration
-          url: /loads/integration
+          url: /rest/loads/integration
     - id: blob-storage
       title: Blob Storage
     - id: web-hooks
       title: Webhooks
-      url: /webhooks
+      url: /rest/webhooks
     - id: devices
       title: Devices
-      url: /devices
+      url: /rest/devices
 - title: Webhook Documentation
-  url: /webhook.html
+  url: /webhooks
   items:
     - id: loads
       title: Loads
-      url: /loads/webhooks.html
+      url: /webhooks/loads
     - id: fleet
       title: Fleet
-      url: /fleet/webhooks.html
+      url: /webhooks/fleet
