--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -41,6 +41,9 @@
     - id: vortex
       title: Vortex
       url: /rest/vortex
+    - id: gatekeeper
+      title: Gatekeeper
+      url: /rest/gatekeeper
     - id: blob-storage
       title: Blob Storage
       url: /rest/blob-storage
