--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -75,6 +75,9 @@
     - id: Quotes
       title: Quotes
       url: /rest/quotes
+    - id: Reporting
+      title: Reporting
+      url: /rest/reporting
     - id: ubd
       title: Universal Barcode Discovery
       url: /rest/ubd
